bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Id of the related customer the survey was executed for</description>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retail Visit KPIs</relationshipLabel>
    <relationshipName>Retail_Visit_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>