bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value__c</fullName>
    <description>Actual Value</description>
    <label>Actual Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>