bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/Assessment_Indicator_Description__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Indicator_Description__c</fullName>
    <description>Description of the specific survey question concatenated to the description of the related product, asset, or assortment</description>
    <label>Assessment Indicator Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>