bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Retail Visit KPIs</relationshipLabel>
    <relationshipName>Retail_Visit_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>