bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id__c</fullName>
    <description>Asset identifier stored as text for Retail Visit KPI records.</description>
    <label>Asset Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>