bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/Assortment_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Assortment_Ext_Id__c</fullName>
    <label>Assortment Ext Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>