bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/AssortmentId__c.field-meta.xml
<CustomField>
    <fullName>AssortmentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssortmentId</label>
    <referenceTo>Assortment</referenceTo>
    <relationshipLabel>Retail Visit KPIs</relationshipLabel>
    <relationshipName>Retail_Visit_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>