bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/Competitor_Space_2__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Space_2__c</fullName>
    <label>Competitor Space 2</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>