bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/CountryISO2Code__c.field-meta.xml
<CustomField>
    <fullName>CountryISO2Code__c</fullName>
    <label>CountryISO2Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Markets</valueSetName>
    </valueSet>
</CustomField>