bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <label>Customer Ext Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>