bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/KPI_Id__c.field-meta.xml
<CustomField>
    <fullName>KPI_Id__c</fullName>
    <label>KPI Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>