bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/Product_Asset_Assortment_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Asset_Assortment_Description__c</fullName>
    <label>Product / Asset / Assortment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>