bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/ProductExternalId__c.field-meta.xml
<CustomField>
    <fullName>ProductExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ProductExternalId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>