bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/Route_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Route_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Route External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>