bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/Route_ID__c.field-meta.xml
<CustomField>
    <fullName>Route_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route ID</label>
    <referenceTo>Route_Sales_Geo__c</referenceTo>
    <relationshipLabel>Retail Visit KPIs</relationshipLabel>
    <relationshipName>Retail_Visit_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>