bundled_metadata/force-app/main/default/objects/RetailVisitKpi/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main Space Audit (Snacks)</fullName>
            </value>
            <value>
                <fullName>Main Space Audit (Beverages)</fullName>
            </value>
            <value>
                <fullName>Secondary Space Audit</fullName>
            </value>
            <value>
                <fullName>SKU Audit</fullName>
            </value>
            <value>
                <fullName>PS-related Surveys</fullName>
            </value>
            <value>
                <fullName>Local Survey</fullName>
            </value>
            <value>
                <fullName>Census</fullName>
            </value>
            <value>
                <fullName>POSM Audit</fullName>
            </value>
            <value>
                <fullName>Main Space Audit</fullName>
            </value>
            <value>
                <fullName>Retail Promotion</fullName>
            </value>         
            <value>
                <fullName>Total Space Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>